# CEWXAI1IN-project

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: app.py  data_processing.py  model_loader.py  rag_pipeline.py
