[project]
name = "cewxai1in-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "byaldi>=0.0.7",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "qwen-vl-utils>=0.0.11",
    "requests>=2.32.4",
    "sentencepiece>=0.2.0",
    "streamlit>=1.46.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.47.1",
]
